--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div>5</div>
             <div>6</div>
             <div>7</div>
-            <div>8</div>
+            <div class="today">8</div>
             <div>9</div>
             <div>10</div>
             <div>11</div>
