--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <title>Month Calender</title>
 </head>
 <body>
+    <!--------- CONTAINER -------->
     <div class="container">
+        <!----CALENDER-->
         <div class="calender">
             <div class="month">
+                <!---DATE--->
                 <div class="date">
                     <h1>June</h1>
                     <p> Wed 08 2022</p>
                 </div>
             </div>
+            <!---WEEKDAYS-->
             <div class="weekdays">
                 <div>Mon</div>
                 <div>Tue</div>
@@ -24,9 +28,13 @@
                 <div>Sat</div>
                 <div>Sun</div>
             </div>
+
+            <!--DAYS-->
             <div class="days">
+                <!--EMPTY DAYS-->
                 <div class="empty"></div>
                 <div class="empty"></div>
+                <!-----DAYS 1 - 30-->
             <div>1</div>
             <div>2</div>
             <div>3</div>
@@ -60,7 +68,12 @@
                 
             </div>
         </div>
+        <!---=======END OF CALENDER=======---->
     </div>
+    <!----========== END OF CONTAINER ===========---->
+
+    <!-------- LINKING OF SCRIPT --------->
+    <script src="./src/script.js"></script>
 </body>
 </html>
 
